# demo-python-switchlang

./: README.md  keyboard_map.json  main.py  main.spec  pyproject.toml  requirements.txt  thai_to_eng.json
